--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
-<p>My <strong>cat</strong> is very grumpy </p>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="wibth=device-width" />
+        <title>匿名です！</title>
+    </head>
+    <body><p>My <strong>cat</strong> is very grumpy </p>
+    </body>
 </html>
