update index.html (delete the typoss)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="wibth=device-width" />
+        <meta name="viewport" content="width=device-width" />
         <title>匿名です！</title>
     </head>
     <body><p>My <strong>cat</strong> is very grumpy </p>
