--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width" />
         <title>匿名です！</title>
     </head>
-    <body><p>My <strong>cat</strong> is very grumpy </p>
+    <body>
+        <img src="のばまんゲームス - 年越しと同時に地球が消滅するやつ２０２４ [7slRw2sLXe8 - 1356x763 - 35m55s].png" alt="白くなった地球"/>
+        <p>My <strong>cat</strong> is very grumpy </p>
     </body>
 </html>
