--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <body>
         <img src="のばまんゲームス - 年越しと同時に地球が消滅するやつ２０２４ [7slRw2sLXe8 - 1356x763 - 35m55s].png" alt="白くなった地球"/>
         <p>My <strong>cat</strong> is very grumpy </p>
+        <p><b>匿名ですはイケメンで天才</b></p>
     </body>
 </html>
