--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <body>
         <img src="のばまんゲームス - 年越しと同時に地球が消滅するやつ２０２４ [7slRw2sLXe8 - 1356x763 - 35m55s].png" alt="白くなった地球"/>
         <p>My <strong>cat</strong> is very grumpy </p>
-        <p><b>匿名ですはイケメンで天才</b></p>
+        <details>
+            <summary><font size="5">匿名ですは</font></summary>
+            <p style="font-size: 5em;"><b>イケメンで天才</b></p>
+        </details>
     </body>
 </html>
