--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
         <title>匿名です！</title>
+        <link rel="stylesheet" href="/CSS/style.css" />
     </head>
     <body>
         <img src="のばまんゲームス - 年越しと同時に地球が消滅するやつ２０２４ [7slRw2sLXe8 - 1356x763 - 35m55s].png" alt="白くなった地球"/>
         <p>My <strong>cat</strong> is very grumpy </p>
         <details>
-            <summary><font size="5">匿名ですは</font></summary>
-            <p style="font-size: 5em;"><b>イケメンで天才</b></p>
+                <summary>匿名ですは</summary>
+            <div class="zigazisan">
+                <b>イケメンで天才</b>
+            </div>
+                <p class="self-criticism"><s>↑自画自賛しても恥ずかしいだけだぞ</s></p>
         </details>
     </body>
 </html>
