--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
             </div>
                 <p class="self-criticism"><s>↑自画自賛しても恥ずかしいだけだぞ</s></p>
         </details>
+        <a href=https://www.youtube.com/@tokumei.pc.ymm4/>YouTubeチャンネルじゃあああ</a>
+
     </body>
 </html>
