--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
         <p>My <strong>cat</strong> is very grumpy </p>
         <details>
                 <summary>匿名ですは</summary>
-            <div class="zigazisan">
+            <div id="zigazisan">
                 <b>イケメンで天才</b>
             </div>
-                <p class="self-criticism"><s>↑自画自賛しても恥ずかしいだけだぞ</s></p>
+                <p id="self-criticism"><s>↑自画自賛しても恥ずかしいだけだぞ</s></p>
         </details>
-        <a href=https://www.youtube.com/@tokumei.pc.ymm4/>YouTubeチャンネルじゃあああ</a>
-
+            <a class="URL" href=https://www.youtube.com/@tokumei.pc.ymm4/>YouTubeチャンネルじゃあああ</a>
     </body>
 </html>
