--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
             <div id="zigazisan">
                 <b>イケメンで天才</b>
             </div>
-                <p id="self-criticism"><s>↑自画自賛しても恥ずかしいだけだぞ</s></p>
-        </details>
+            <div id="self-criticism">
+                <p><s>↑自画自賛しても恥ずかしいだけだぞ</s></p>
+            </div>
+            </details>
             <a class="URL" href=https://www.youtube.com/@tokumei.pc.ymm4/>YouTubeチャンネルじゃあああ</a>
     </body>
 </html>
